# BackendBench

./: pyproject.toml
.github/workflows/: smoke-test.yml
BackendBench/backends/: directory.py
BackendBench/scripts/: create_simple_test_ops_cuda.py  main.py
BackendBench/suite/: facto.py
test/: test_directory_backend.py
